fix gaps in styling

--- a/navstyle.css
+++ b/navstyle.css
@@ -27,10 +27,10 @@ body {
     position: relative;
     display: flex;
     justify-content: center;
-    top: -190px;
+    top: -213.5px;
     transform: translateX(70px);
     overflow: hidden;
-    height: 150px;
+    height: 180px;
     align-items: flex-end;
     width: 94%;
     max-width: 900px;
@@ -125,7 +125,7 @@ body {
 }
 
 .nav input:checked + label {
-    background: #var(--dark);
+    background: var(--dark);
     transform: translateY(70%);
 }
 
