--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+body {
+    background-image: url('bg.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: top left;
+}
+
 header {
     border-bottom: 5px solid black;
     height: 165px;
